Fix issue where header content would overflow if window is shrinked horizontally.

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ a {
     width: 100vw;
     height: 100vh;
     grid-template-columns: 15rem 5fr;
-    grid-template-rows: 10rem 1fr;
+    grid-template-rows: min-content 1fr;
 }
 
 /* HEADER PROPERTIES*/
@@ -39,6 +39,7 @@ a {
     padding: 1rem 3rem;
     position: relative;
     box-shadow: 0 -1rem 2rem;
+    gap: 1rem 0;
 }
 
 .header-top {
@@ -197,4 +198,18 @@ a {
 .main-content {
     background-color: var(--grey);
     grid-area: 2 / 2 / 3 / 3;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    padding: 2rem 1rem;
 }
+
+.main-content .projects {
+    grid-area: 1 / 1 / span 2 / span 1;
+}
+
+.main-content h1 {
+    font-size: 1.1rem;
+
+}
+
